# idpalette

./: LICENSE  README.md  noxfile.py  pyproject.toml
src/idpalette/: __init__.py
tests/: test_alias_functions.py  test_colour_maps.py  test_invalid_args.py  test_n_colours.py  test_plot_palettes.py
